--- a/find-s.ipynb
+++ b/find-s.ipynb
@@ -115,20 +115,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['many', 'big', 'no', 'expensive', 'one', 'yes']\n",
-      "['?', '?', '?', '?', '?']\n",
-      "['many', 'medium', 'no', 'expensive', 'many', 'yes']\n",
-      "['?', '?', '?', '?', '?']\n",
-      "['many', 'small', 'no', 'afforable', 'many', 'yes']\n",
-      "['?', '?', '?', '?', '?']\n",
-      "['?', '?', '?', '?', '?']\n"
+      "  citations    size inLibrary      price editions  buy\n",
+      "1      many     big        no  expensive      one  yes\n",
+      "3      many  medium        no  expensive     many  yes\n",
+      "4      many   small        no  afforable     many  yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_class = data[data['buy'] == 'yes']\n",
+    "print(positive_class)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['many', '?', 'no', '?', '?']\n"
      ]
     }
    ],
@@ -136,29 +151,30 @@
     "# print(data)    \n",
     "# function to make the generalized hypothesis\n",
     "def generalized_hypo(data):\n",
-    "    attr_len = data.shape[1] - 1\n",
+    "    attr_len = positive_class.shape[1] - 1\n",
     "    h0 = [\"0\"] * attr_len\n",
-    "    for i in range(data.shape[0]):\n",
-    "        currRow = data.values.tolist()[i]\n",
-    "        if currRow[-1] == \"no\":\n",
-    "            continue\n",
-    "        else:\n",
-    "            print(currRow)\n",
-    "            for j in range(attr_len):\n",
-    "                if h0[j] == currRow[j]:\n",
-    "                    continue\n",
+    "    for i in range(positive_class.shape[0]):\n",
+    "        currRow = positive_class.values.tolist()[i]\n",
+    "        for j in range(attr_len):\n",
+    "            if h0[j] == currRow[j]:\n",
+    "                continue\n",
+    "            else:\n",
+    "                if i == 0:\n",
+    "                    h0[j] = currRow[j]\n",
     "                else:\n",
-    "                    if i == 0:\n",
-    "                        h0[j] = currRow[j]\n",
-    "                    else:\n",
-    "                        h0[j] = \"?\"\n",
+    "                    h0[j] = \"?\"\n",
     "\n",
-    "            print(h0)\n",
-    "            \n",
     "    return h0\n",
     "\n",
     "print(generalized_hypo(data))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
