--- a/find-s.ipynb
+++ b/find-s.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import model as model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -36,58 +37,52 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>citations</th>\n",
-       "      <th>size</th>\n",
-       "      <th>inLibrary</th>\n",
-       "      <th>price</th>\n",
-       "      <th>editions</th>\n",
-       "      <th>buy</th>\n",
+       "      <th>outlook</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>windy</th>\n",
+       "      <th>play</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>some</td>\n",
-       "      <td>small</td>\n",
-       "      <td>no</td>\n",
-       "      <td>affordable</td>\n",
-       "      <td>many</td>\n",
-       "      <td>no</td>\n",
+       "      <td>overcast</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>high</td>\n",
+       "      <td>False</td>\n",
+       "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>many</td>\n",
-       "      <td>big</td>\n",
-       "      <td>no</td>\n",
-       "      <td>expensive</td>\n",
-       "      <td>one</td>\n",
+       "      <td>overcast</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>True</td>\n",
        "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>some</td>\n",
-       "      <td>big</td>\n",
-       "      <td>always</td>\n",
-       "      <td>expensive</td>\n",
-       "      <td>few</td>\n",
-       "      <td>no</td>\n",
+       "      <td>overcast</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>high</td>\n",
+       "      <td>True</td>\n",
+       "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>many</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>no</td>\n",
-       "      <td>expensive</td>\n",
-       "      <td>many</td>\n",
+       "      <td>overcast</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>False</td>\n",
        "      <td>yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>many</td>\n",
-       "      <td>small</td>\n",
-       "      <td>no</td>\n",
-       "      <td>afforable</td>\n",
-       "      <td>many</td>\n",
+       "      <td>rainy</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>high</td>\n",
+       "      <td>False</td>\n",
        "      <td>yes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -95,78 +90,74 @@
        "</div>"
       ],
       "text/plain": [
-       "  citations    size inLibrary       price editions  buy\n",
-       "0      some   small        no  affordable     many   no\n",
-       "1      many     big        no   expensive      one  yes\n",
-       "2      some     big    always   expensive      few   no\n",
-       "3      many  medium        no   expensive     many  yes\n",
-       "4      many   small        no   afforable     many  yes"
+       "    outlook temperature humidity  windy play\n",
+       "0  overcast         hot     high  False  yes\n",
+       "1  overcast        cool   normal   True  yes\n",
+       "2  overcast        mild     high   True  yes\n",
+       "3  overcast         hot   normal  False  yes\n",
+       "4     rainy        mild     high  False  yes"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('Sampledata-2.csv')\n",
+    "data = pd.read_csv('weather.csv')\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  citations    size inLibrary      price editions  buy\n",
-      "1      many     big        no  expensive      one  yes\n",
-      "3      many  medium        no  expensive     many  yes\n",
-      "4      many   small        no  afforable     many  yes\n"
+      "     outlook temperature humidity  windy play\n",
+      "0   overcast         hot     high  False  yes\n",
+      "1   overcast        cool   normal   True  yes\n",
+      "2   overcast        mild     high   True  yes\n",
+      "3   overcast         hot   normal  False  yes\n",
+      "4      rainy        mild     high  False  yes\n",
+      "5      rainy        cool   normal  False  yes\n",
+      "7      rainy        mild   normal  False  yes\n",
+      "12     sunny        cool   normal  False  yes\n",
+      "13     sunny        mild   normal   True  yes\n",
+      "(9, 5)\n"
      ]
     }
    ],
    "source": [
-    "positive_class = data[data['buy'] == 'yes']\n",
-    "print(positive_class)"
+    "positive_class = data[data['play'] == 'yes']\n",
+    "print(positive_class)\n",
+    "print(positive_class.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['many', '?', 'no', '?', '?']\n"
+      "Training model...\n",
+      "Model: Find-S\n",
+      "H0: ['?', '?', '?', '?']\n"
      ]
     }
    ],
    "source": [
     "# print(data)    \n",
     "# function to make the generalized hypothesis\n",
-    "def generalized_hypo(data):\n",
-    "    attr_len = positive_class.shape[1] - 1\n",
-    "    h0 = [\"0\"] * attr_len\n",
-    "    for i in range(positive_class.shape[0]):\n",
-    "        currRow = positive_class.values.tolist()[i]\n",
-    "        for j in range(attr_len):\n",
-    "            if h0[j] == currRow[j]:\n",
-    "                continue\n",
-    "            else:\n",
-    "                if i == 0:\n",
-    "                    h0[j] = currRow[j]\n",
-    "                else:\n",
-    "                    h0[j] = \"?\"\n",
-    "\n",
-    "    return h0\n",
-    "\n",
-    "print(generalized_hypo(data))"
+    "model = model.Model(\"Find-S\")\n",
+    "h0 = model.fit(positive_class)\n",
+    "print(\"H0: {}\".format(h0))"
    ]
   },
   {
@@ -174,7 +165,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# test\n",
+    "test = ['sunny', 'cool', 'high', 'False']"
+   ]
   }
  ],
  "metadata": {
